# MySQL_C

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytextedit.cpp  mytextedit.h
